	* 09/04

	** mode 341 (CallMethod button is added to EditList)
	This button is used to call object method. In the construction,
	string name of method should be give. An object is passed via
	SetValue to tell which object's method should be called.

	** methods to extract subset of gl_component plot data

	v, idx, cdata = gl_component::get_subset(components)
	gl_component::shown_component property to get shown component

	example to plot a subset of solid plot
	>> s = proj.model1.mfem.mfembook.page1.axes1.face.shown_component
        >> v, idx, cdata = proj.model1.mfem.mfembook.page1.axes1.face.get_subset(s)
        >> figure();solid(v, idx)

	** inverse keyword to gl_component::hide_component
	
	gl_component::hide_component(idx, inverse=False): if inverse is True,
	it hides everything except for the components list.
	
	
	* 08/31-2017

	** obj keyword is added to cls to delete plot selectively
	
    	   >>> figure();
    	   >>> o1 = plot(np.arange(30))
           >>> o2 = oplot(np.arange(40))
           >>> cls(obj=obj)

	
	* 08/08-20 2017

	** Solid/Revolve/Surface

	The use of index array in OpenGL driver is fixed which reduces
	the number of vertices to be transfered to GPU. solid command
	accept,,,

   	1) solid(vertices)
	2) solid(vertices, index)

	1) is old version. vertices are already expanded.
	2) is equivalent to solid(vertices[index]), but internally
	it uses the index array pointer, so that CPU does not send
	duplicate vertex information to GPU.

	** API for custom figure menu palette is added

	BookViewerFrame::install_toolbar_palette(name, tasks,  mode = '2D'):
	BookViewerFrame::use_toolbar_palette(palette_name, mode = '2D')
	BookViewerFrame::use_toolbar_std_palette()
	BookViewerFrame::refresh_toolbar_buttons()

	** GLCompound to support GL artist with multiple elements

	GLCompound supports a GL artists which has multiple pickalbe
	objects. This allows for picking a different part of 3D object
	without using many FigObj.

	GLCompound::isCompound